--- a/pages/chat/chat.wxss
+++ b/pages/chat/chat.wxss
@@ -7,6 +7,28 @@ page {
    
   }
    
+/* 聊天记录 */
+/* pages/chat/friends/friends.wxss */
+.faceImage{
+  width:120rpx;
+  height:120rpx;
+  border-radius:50%;
+  margin-right:40rpx;
+  /* margin-bottom: 40rpx; */
+  
+}
+
+.user-list{
+  display:flex;
+  direction:row;
+  margin:20rpx 20rpx;
+
+}
+.nick-name{
+  margin-top:30rpx;
+  margin-left:30rpx;
+}
+
   /* 聊天内容 */
    
   .news {
