--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -71,13 +71,17 @@ autoplay current="0" interval="5000" duration="1000" circular >
         bindtap=""
         hidden="{{second}}">
         <view class="avatar">
-            <image class="img" src="{{item.picsource}}" mode="scaleToFill" />
+            <image class="img" src="{{item.docPhoto}}" mode="scaleToFill" />
         </view>   
         <view class="info"> 
-          <text class="name">{{item.name}}</text>
-          <text class="title">{{item.title}}</text>
-          <view class="hospital">{{item.hospital}}</view>
-          <view class="excel">擅长：{{item.excel}}</view>
+          <text class="name">{{item.ciRealname}}</text>
+          <text class="title">{{item.docPost}}</text>
+          <view>
+            <text class="hospital">{{item.docHospital}}</text>
+            <text class="keshi">{{item.docDepartment}}</text>
+          </view>
+          
+          <!-- <view class="excel">擅长：{{item.excel}}</view> -->
         </view>   
   </view>
   <!-- <view class="post_floor"
