--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -172,7 +172,7 @@ swiper swiper-item .pic {
   border-bottom: solid #e9e9e9;
   display: flex;
   width: 100%;
-  height: 250rpx;
+  height: 150rpx;
 }
 
 .doctor_floor .avatar{
@@ -198,8 +198,16 @@ swiper swiper-item .pic {
   font-weight: bold;
 }
 
+.doctor_floor .info view{
+  margin: 10rpx 0;
+}
+
 .doctor_floor .info .title{
   border: none;
+  margin-left: 10rpx;
+}
+
+.doctor_floor .info .keshi{
   margin-left: 10rpx;
 }
 
