--- a/pages/chat/chat.wxml
+++ b/pages/chat/chat.wxml
@@ -3,8 +3,8 @@
       <scroll-view scroll-y="true" class="history" scroll-top="{{scrollTop}}">
       <block wx:for="{{newslist}}" wx:key>
           <!-- 历史消息 -->
-          <!-- <view>{{item.date}}</view> -->
-          <view>20:00:00</view>
+          <view>{{item.date}}</view>
+          <!-- <view>20:00:00</view> -->
           <!--自己的消息 -->
           <view class="chat-news" wx:if="{{item.nickName == userInfo.nickName}}">
               <view style="text-align: right;padding-right: 20rpx;">
@@ -24,32 +24,32 @@
         
       <!-- 别人的消息 -->
         
-      <view class="chat-news" wx:else>
-          <view style="text-align: left;padding-left: 20rpx;">
+          <view class="chat-news" wx:else>
+              <view style="text-align: left;padding-left: 20rpx;">
+                
+              <image class='new_img' src="{{item.avatarUrl? item.avatarUrl:'images/avator.png'}}"></image>
+                
+              <text class="name">{{ item.nickName }}</text>
+          </view>
             
-          <image class='new_img' src="{{item.avatarUrl? item.avatarUrl:'images/avator.png'}}"></image>
+          <view class='you_left'>
             
-          <text class="name">{{ item.nickName }}</text>
-      </view>
-        
-      <view class='you_left'>
-        
-          <block wx:if="{{item.type=='text'}}">
+              <block wx:if="{{item.type=='text'}}">
+                
+              <view class='new_txt'>{{item.content}}</view>
+                
+              </block>
+              
+              <block wx:if="{{item.type=='image'}}">
+                
+              <image class="selectImg" src="{{item.images}}" data-src="{{item.images}}" lazy-load="true" bindtap="previewImg"></image>
+                
+              </block>
             
-          <view class='new_txt'>{{item.content}}</view>
+          </view>
             
-          </block>
-          
-          <block wx:if="{{item.type=='image'}}">
+          </view>
             
-          <image class="selectImg" src="{{item.images}}" data-src="{{item.images}}" lazy-load="true" bindtap="previewImg"></image>
-            
-          </block>
-        
-      </view>
-        
-      </view>
-        
       </block>
         
       </scroll-view>
