--- a/pages/luntan/luntan.wxss
+++ b/pages/luntan/luntan.wxss
@@ -56,7 +56,7 @@
   .good-img image{
     width: 100%;
     height: 200px;
-    border-radius: 5px;
+    border-radius: 20%;
   }
   .good-href{
     display: inline-block;
