--- a/pages/luntan/detail/detail.wxml
+++ b/pages/luntan/detail/detail.wxml
@@ -6,35 +6,44 @@
 <view class="detail-post-meta">
   <!-- 用户头像 -->
   <view class="detail-post-avatar">
-    <image class="detail-post-avatar-img" mode="scaleToFill" src="{{ detail.author.avatar_url }}" />
+    <!-- <image class="detail-post-avatar-img" mode="scaleToFill" src="{{ detail.author.avatar_url }}" /> -->
+    <image class="detail-post-avatar-img" mode="scaleToFill" src="{{detail.ciAvatarturl}}" />
   </view>
 
   <view class="detail-post-info">
     <view class="detail-post-author-name">
-      <!-- 、、用户名字 -->
-      <text>{{ detail.author.loginname }}</text>
+      <!-- 用户名字 -->
+      <text>{{ detail.ciNkname}}</text>
   
-      <view class="detail-type-item"  wx:if="{{detail.tab === 'good'}}">
+      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'good'}}"> -->
+      <view class="detail-type-item"> 
         <view class="detail-type-item-font">#精华#</view>
       </view>
-      <view class="detail-type-item"  wx:if="{{detail.tab === 'share'}}">
+      <view class="detail-type-item">
+      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'share'}}"> -->
         <view class="detail-type-item-font">#分享#</view>
       </view>
-      <view class="detail-type-item"  wx:if="{{detail.tab === 'ask'}}">
+      <view class="detail-type-item">
+      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'ask'}}"> -->
         <view class="detail-type-item-font">#问答#</view>
       </view>
-      <view class="detail-type-item"  wx:if="{{detail.tab === 'job'}}">
+      <view class="detail-type-item">
+      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'job'}}"> -->
         <view class="detail-type-item-font">#招聘#</view>
       </view>
     </view>
     <!-- 发表时间 -->
-    <view class="detail-post-time">楼主 发表于{{ detail.create_at }}</view>
+    <view class="detail-post-time">楼主 发表于{{ detail.createTime }}</view>
   </view>
 
-  <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect" wx:if="{{detail.is_collect == true}}">取消收藏
-
+  <!-- <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect" wx:if="{{detail.is_collect == true}}">取消收藏
+  </view> -->
+  <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect">取消收藏
   </view>
-  <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect" wx:if="{{detail.is_collect == false}}">收藏
+  <!-- <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect" wx:if="{{detail.is_collect == false}}">收藏
+
+  </view> -->
+  <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect">收藏
 
   </view>
 </view>
@@ -43,14 +52,19 @@
 <view class="detail-post-header">
 
   <view class="detail-post-title">
-    <view class="detail-posts-tag hot" wx:if="{{detail.top === true}}">置顶</view>
+    <view class="detail-posts-tag hot">置顶</view>
+    <view class="detail-posts-tag">精华</view>
+    {{detail.pTitle}}
+  </view>
+  <!-- <view class="detail-posts-tag hot" wx:if="{{detail.top === true}}">置顶</view>
     <view class="detail-posts-tag" wx:if="{{detail.good === true}}">精华</view>
     {{ detail.title }}
-  </view>
+  </view> -->
+
 </view>
 <!-- post-content -->
 <view class="detail-post-content">
-  <text class="content-info">{{ detail.content }}</text>
+  <text class="content-info">{{ detail.pContent}}====</text>
 </view>
 <!-- post-comment -->
 <view class="detail-post-comment">
