--- a/pages/luntan/detail/detail.wxml
+++ b/pages/luntan/detail/detail.wxml
@@ -33,28 +33,28 @@
       </view>
     </view>
     <!-- 发表时间 -->
-    <view class="detail-post-time">楼主 发表于{{ detail.createTime }}</view>
+    <view class="detail-post-time">楼主 发表于{{ detail.createTime }},{{detail.pLocation}}</view>
   </view>
 
   <!-- <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect" wx:if="{{detail.is_collect == true}}">取消收藏
   </view> -->
-  <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect">取消收藏
-  </view>
+  <!-- <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect">取消收藏 -->
+  <!-- </view> -->
   <!-- <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect" wx:if="{{detail.is_collect == false}}">收藏
 
   </view> -->
-  <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect">收藏
+  <!-- <view class="detail-collect-item" id="{{detail.id}}" catchtap="collect">收藏 -->
 
-  </view>
+  <!-- </view> -->
 </view>
 
 <!-- post-header -->
 <view class="detail-post-header">
 
   <view class="detail-post-title">
-    <view class="detail-posts-tag hot">置顶</view>
-    <view class="detail-posts-tag">精华</view>
-    {{detail.pTitle}}
+    <!-- <view class="detail-posts-tag hot">置顶</view> -->
+    <view class="detail-posts-tag">浏览量：{{detail.pReadNum}}</view>
+    <view>{{detail.pTitle}}</view>
   </view>
   <!-- <view class="detail-posts-tag hot" wx:if="{{detail.top === true}}">置顶</view>
     <view class="detail-posts-tag" wx:if="{{detail.good === true}}">精华</view>
